feat(api): add client credentials refs #89
